# mysql-logger

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  docker-compose.yml
scripts/: Dockerfile  connect.sh  dc-cat.sh  dc-install.sh  dc-show-vars.sh  dc-uninstall.sh  debug.sh  docker-compose.yml  init-data-dir.sh  init.sh  init.sql  install-data-dir.sh  install.sh  mysql.sh  run.sh  select-timer.sh  select.sh  uninstall.sh
scripts/docker/: logger.cnf  mysql.sh
scripts/include/: data-dir.sh  mysqld.sh
src/: base64.c  base64.h  bool.h  config.c  config.h  defs.h  error.c  error.h  hex.c  hex.h  http.c  http.h  json.c  json.h  logger.c  sha1.c  sha1.h  socket_ext.c  socket_ext.h  strbuf.c  strbuf.h  string_ext.c  string_ext.h  thread.c  thread.h  time.c  time.h  types.h  ws.c  ws.h
src/tools/: cdump.c  file_concat.c
src/ui/: index.css  index.html
tests/: all_tests.c  config_tests.c  config_tests.h  http_tests.c  http_tests.h  json_tests.c  json_tests.h  strbuf_tests.c  strbuf_tests.h  string_ext_tests.c  test.h
ui/: index.css  index.html  index.js
